fix overflowing of style in icons in .todo-item .settings

--- a/todo_react_js/src/assets/main.scss
+++ b/todo_react_js/src/assets/main.scss
@@ -360,6 +360,11 @@ nav{
         gap:5px;
         align-items:center;
 
+        svg{
+          max-height:100%;
+          max-width:100%;
+        }
+
         a{
           line-height:0;
         }
